# phyllotaxis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  VERSIONING.md  deny.toml
.beads/: issues.jsonl
.claude/: settings.json
.claude/hooks/: release-guard.py
.claude/rules/: error-handling.md
.develop/: ci-release-pipeline-phase-b.md  ci-release-pipeline-quality-report.md  ci-release-pipeline-validation-report.md  ci-release-pipeline.json  kitchen-sink-coverage-gaps-phase-b.md  kitchen-sink-coverage-gaps-quality-report.md  kitchen-sink-coverage-gaps-validation-report.md  kitchen-sink-coverage-gaps.json  kitchen-sink-review-fixes-phase-b.md  kitchen-sink-review-fixes-quality-report.md  kitchen-sink-review-fixes-validation-report.md  kitchen-sink-review-fixes.json  phyllotaxis-quality-report.md  phyllotaxis-validation-report.md  phyllotaxis.json  state.json  ux-improvements-phase-b.md  ux-improvements-quality-report.md  ux-improvements-validation-report.md  ux-improvements.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-idea.yml  improvement.yml
.github/workflows/: ci.yml  pr-policy.yml  release.yml
assets/: demo-schemas.tape  demo-search.tape  demo-used-by.tape  demo.tape
docs/plans/: 2026-02-20-phyllotaxis-design.md  2026-02-20-phyllotaxis-implementation.md  (+13 more)
releases/: RUNBOOK.md  TEMPLATE.md  v0.3.0.md
specs/: phyllotaxis-design-spec.md  phyllotaxis-implementation-plan.md
src/: lib.rs  main.rs  spec.rs
src/commands/: auth.rs  (+8 more)
tests/: fixture_sanity.rs  integration_tests.rs  lib_tests.rs
(+20 files in other folders)
