[package]
name = "phyllotaxis"
version = "0.1.0"
edition = "2021"

[dependencies]
human-panic = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
openapiv3 = "2.2"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
indexmap = "2.13.0"
strsim = "0.11"
clap_complete = "4"

[[bin]]
name = "phyllotaxis"
path = "src/main.rs"

[[bin]]
name = "phyll"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
overflow-checks = true
panic = "abort"
